Fix: Spacing

--- a/styles/header.css
+++ b/styles/header.css
@@ -38,5 +38,5 @@ header .container {
 #info li {
     display: flex;
     align-items: center;
-    gap: 8px
+    gap: 9px
 }
